2001-02-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_man_pages): Let install-man and
	uninstall-man be handled by the dependency tracker.
	(&initialize_per_input): Let %dependencies track them.
	* mans.am: Add the needed hooks with the proper dependencies.

2001-02-22  Pavel Roskin  <proski@gnu.org>

	* tests/target-cflags.test: Don't use subshell to configure in
	subdirectory. Typo fix - run `./foo', not `/foo'.

2001-02-22  Akim Demaille  <akim@epita.fr>

	* automake.in: Formatting and mying changes.

2001-02-21  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_dist): Introduce new variable to avoid extra
	keys in %dist_dirs.  Fixes distdir.test.

	* automake.in (handle_texinfo): Only remove suffixes we can
	handle.

	* tests/distdir.test: Check to make sure directory isn't made in
	build directory.

	* automake.in (handle_dist): Do nothing in Cygnus mode.

2001-02-21  Pavel Roskin  <proski@gnu.org>

	* header-vars.am: Remove tabs before variable definitions.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* tests/distdir.test (EXTRA_DIST): Use a finer pattern to avoid
	false diagnostics.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&dist_cmp, &target_cmp): Be sure to return a
	numeric value as required by Perl 5.6.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* dist-vars.am: Remove, merge into...
	* distdir.am: this.
	* automake.in (dirname, basename, backname): Move to the top of
	the file so that prototypes are checked,
	Use them without `&'.
	(&handle_dist): Adjust.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&check_ambiguous_conditional, &read_main_am_file):
	Use a uniform naming scheme.
	(&quote_cond_val, &unquote_cond_val): Delete, dead code.
	(&read_am_file): Fix conditional definition of backslash continued
	items.

2001-02-21  Akim Demaille  <akim@epita.fr>

	Change the handling of conditionals: instead of using an ad-hoc
	encoding to store a hash in a string, use hashes.
