@@ -15,6 +15,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
+
 install-@DIR@PYTHON: $(@DIR@_PYTHON)
 	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(DESTDIR)$(@DIR@dir)
