@@ -1,5 +1,10 @@
 2001-02-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in: Formatting and mying changes.
+
+	
+2001-02-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_man_pages): Let install-man and
 	uninstall-man be handled by the dependency tracker.
 	(&initialize_per_input): Let %dependencies track them.
